--- a/TrekPack/Storyboard/Base.lproj/Main.storyboard
+++ b/TrekPack/Storyboard/Base.lproj/Main.storyboard
@@ -55,19 +55,12 @@
         <!--Item Page View Controller-->
         <scene sceneID="1dh-xi-N4x">
             <objects>
-                <viewController storyboardIdentifier="NTPage1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sHQ-Uk-j7K" customClass="ItemPageViewController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="nKl-e5-B45">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="VZD-op-crz"/>
-                    </view>
+                <viewController storyboardIdentifier="NTIP" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sHQ-Uk-j7K" customClass="ItemPageViewController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="ntD-gF-8iK"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SDS-6C-Qyz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="386.95652173913044" y="-1930.5803571428571"/>
+            <point key="canvasLocation" x="1861" y="-1104"/>
         </scene>
         <!--New Trek View Controller-->
         <scene sceneID="Ngf-Qe-B6C">
@@ -115,7 +108,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0D-n1-6dp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-523.1884057971015" y="-1930.5803571428571"/>
+            <point key="canvasLocation" x="990" y="-1104"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="15z-oR-bgn">
@@ -134,6 +127,34 @@
                 </navigationController>
             </objects>
             <point key="canvasLocation" x="-774" y="-1104"/>
+        </scene>
+        <!--View Trek View Controller-->
+        <scene sceneID="gxe-x7-dZf">
+            <objects>
+                <viewController storyboardIdentifier="VTC" id="7xN-40-CwS" customClass="ViewTrekViewController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="aJh-dT-gVv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uYq-aK-2sx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="45" y="-1915"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nI3-BD-xHg">
+            <objects>
+                <navigationController storyboardIdentifier="VMT" automaticallyAdjustsScrollViewInsets="NO" id="cag-Pz-ANV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zNo-56-XNm">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="7xN-40-CwS" kind="relationship" relationship="rootViewController" id="jNK-qL-EBb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wwL-Eq-EnV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-775" y="-1915"/>
         </scene>
     </scenes>
     <resources>
